test/resources/valid/com/boothj5/jarchexample/application/telephonenumber/dao/TelephoneNumberDAO.java
package com.boothj5.jarchexample.application.telephonenumber.dao;

import java.util.List;

import com.boothj5.jarchexample.application.common.*;
